--- a/Source/02_HTML_CSS/Ch06_쇼핑몰/css/shoppingmall.css
+++ b/Source/02_HTML_CSS/Ch06_쇼핑몰/css/shoppingmall.css
@@ -26,7 +26,7 @@ header .gnb a {color:white;}
 header .gnb ul{
   width: 1000px; margin: 0 auto;
   overflow: hidden;
-  height: 30px; line-height: 30px;
+  /* height: 30px; */line-height: 30px;
 }
 header .gnb ul li{
   float: left;
@@ -88,7 +88,7 @@ header .lnb ul li{
 }
 #content .section1 > div {
   float:left;
-  height: 400px;
+  /*height: 400px; line-height:400px 있으니 생략 가능 자동 height 잡힘*/
   border: 1px solid gray; box-sizing: border-box;
   text-align: center; line-height: 400px;
 }
@@ -107,3 +107,21 @@ header .lnb ul li{
   line-height: 400px; text-align: center;
 }
 /********* footer *********/
+footer{
+  width: 1000px; margin: 0 auto;
+  overflow: hidden;
+}
+/* footer div:nth-child(1), 
+footer div:nth-child(2), 
+footer div:nth-child(3)*/
+footer div:nth-child(-n+3){
+  float: left;
+  width:33.3%;
+  border: 1px solid gray; box-sizing: border-box;
+  height: 100px;
+}
+footer div:last-child{
+  clear: both; /* 앞태그에서 전달받은 float(left,right)속을 clear*/
+  background-color: black; color:white;
+  line-height: 50px; text-align: center;
+}
